--- a/core/_variables.scss
+++ b/core/_variables.scss
@@ -13,12 +13,12 @@ $base-font-family:
 
 // Line height
 $base-line-height: (5 / 3);
-$heading-line-height: 1.125;
+$heading-line-height: 1.25;
 
 // Other Sizes
 $base-border-radius: 0.25rem;
-$base-spacing: $base-line-height * 1rem;
-$small-spacing: $base-spacing / 2;
+$base-vertical-spacing: $base-line-height * 1rem;
+$small-vertical-spacing: $base-vertical-spacing / 2;
 $base-gutter: 2rem;
 $component-gutter: 1.375rem;
 $base-z-index: 0;
@@ -46,19 +46,13 @@ $secondary-font-color: $coin;
 $action-color: $lake;
 
 // Borders
-$base-border-color: $smoke;
-$base-border: 1px solid $base-border-color;
+$base-border-color: $coin;
+$base-border: 0.0625px solid $base-border-color;
 
 // Background Colors
 $viewport-background-color: whitesmoke;
 $base-background-color: white;
 $error-background-color: $cadmium;
-
-// Focus
-$focus-outline-color: rgba($action-color, 0.4);
-$focus-outline-width: 0.1875rem;
-$focus-outline: $focus-outline-width solid $focus-outline-color;
-$focus-outline-offset: 0.125rem;
 
 // Effects
 $dark-gradient: linear-gradient(140deg, $graphite 0%, $coal 100%);
@@ -72,7 +66,6 @@ $form-element-box-shadow:
   inset 0 0.0625rem rgba(black ,0.05),
   0 1.125rem 1rem rgba(black, 0.1),
   0 0.25rem 0.5rem rgba(black , 0.05);
-$form-element-box-shadow--focus: 0 0 0 0.125rem $action-color;
 
 // Animations
 $base-duration: 175ms;
