Add disable style to buttons

--- a/core/_forms.scss
+++ b/core/_forms.scss
@@ -111,4 +111,10 @@ button,
   user-select: none;
   vertical-align: middle;
   white-space: nowrap;
+
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
 }
