Add tags and tag lists

--- a/application.scss
+++ b/application.scss
@@ -13,3 +13,5 @@
 
 @import "components/dark-form-inputs";
 @import "components/headings";
+@import "components/tags";
+@import "components/tag-lists";
