Add text contents

--- a/application.scss
+++ b/application.scss
@@ -16,3 +16,4 @@
 @import "components/tags";
 @import "components/tag-lists";
 @import "components/text-links";
+@import "components/text-contents";
