Add inline form elements

--- a/application.scss
+++ b/application.scss
@@ -15,6 +15,7 @@
 @import "components/dark-form-inputs";
 @import "components/form-errors";
 @import "components/headings";
+@import "components/inline-form-elements";
 @import "components/tags";
 @import "components/tag-lists";
 @import "components/text-contents";
