--- a/application.scss
+++ b/application.scss
@@ -11,6 +11,7 @@
 @import "core/tables";
 @import "core/typography";
 
+@import "components/checkboxes";
 @import "components/containers";
 @import "components/dark-form-inputs";
 @import "components/form-errors";
