--- a/core/_variables.scss
+++ b/core/_variables.scss
@@ -65,16 +65,16 @@ $error-background-color: $cadmium;
 
 // Effects
 $dark-gradient: linear-gradient(140deg, $graphite 0%, $coal 100%);
-$light-gradient: linear-gradient(180deg, $base-background-color 0%, $viewport-background-color 100%);
-$box-shadow:
+$light-gradient: linear-gradient(140deg, $base-background-color 0%, $viewport-background-color 100%);
+$base-box-shadow:
+  inset 0 0.0625rem rgba(black ,0.05),
+  0 1.125rem 1rem rgba(black, 0.1),
+  0 0.25rem 0.5rem rgba(black , 0.05);
+$strong-box-shadow:
   inset 0 0.0625rem rgba(black ,0.05),
   0 1.25rem 1rem -1.5rem rgba($graphite, 0.5),
   0 0.75rem 1.75rem -0.25rem rgba($graphite, 0.6),
   0 1.25rem 2.5rem rgba($graphite, 0.3);
-$form-element-box-shadow:
-  inset 0 0.0625rem rgba(black ,0.05),
-  0 1.125rem 1rem rgba(black, 0.1),
-  0 0.25rem 0.5rem rgba(black , 0.05);
 
 // Animations
 $base-duration: 175ms;
