--- a/application.scss
+++ b/application.scss
@@ -12,6 +12,7 @@
 @import "core/typography";
 
 @import "components/checkboxes";
+@import "components/cards";
 @import "components/containers";
 @import "components/dark-form-inputs";
 @import "components/form-errors";
