Rename dark form inputs to form inputs

--- a/application.scss
+++ b/application.scss
@@ -14,8 +14,8 @@
 @import "components/checkboxes";
 @import "components/cards";
 @import "components/containers";
-@import "components/dark-form-inputs";
 @import "components/form-errors";
+@import "components/form-inputs";
 @import "components/headings";
 @import "components/inline-form-elements";
 @import "components/tags";
