--- a/components/_form-inputs.scss
+++ b/components/_form-inputs.scss
@@ -1,4 +1,4 @@
-.dark-form-input {
+.form-input {
     -webkit-font-smoothing: antialiased;
     background-color: $graphite;
     background-image: $dark-gradient;
