Rename inline form elements to form inline groups

--- a/components/_form-inline-groups.scss
+++ b/components/_form-inline-groups.scss
@@ -1,8 +1,8 @@
-.inline-form-group {
+.form-inline-group {
   margin-bottom: $base-vertical-spacing;
 }
 
-.inline-form-group__element {
+.form-inline-group__element {
   display: inline;
   margin-bottom: 0;
 }
