--- a/application.scss
+++ b/application.scss
@@ -11,9 +11,9 @@
 @import "core/tables";
 @import "core/typography";
 
-@import "components/checkboxes";
 @import "components/cards";
 @import "components/containers";
+@import "components/form-checkboxes";
 @import "components/form-errors";
 @import "components/form-inline-groups";
 @import "components/form-inputs";
